# box86

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  COMPILE.md  LICENSE  README.md  USAGE.md  install_steam.sh  postinst  rebuild_printer.py  rebuild_wrappers.py  runTest.cmake  update_box86.sh
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  manual.yml  release.yml
archlinux/: PKGBUILD-RPi4B  PKGBUILD-arm  PKGBUILD-gameshell  PKGBUILD-odroid  PKGBUILD-pandora  PKGBUILD-pyra  PKGBUILD-raspberrypi  PKGBUILD-rk3399  PKGBUILD-x86  README.md
debian/: changelog  control  copyright  lintian-override  rules
debian/upstream/: metadata
docs/: CHANGELOG.md  COMPILE.md  README.md  README_CN.md  README_UK.md  USAGE.md  X86WINE.md
pkgbuilds/: PKGBUILD-a64  PKGBUILD-arm  PKGBUILD-arm64  PKGBUILD-gameshell  PKGBUILD-goaclone  PKGBUILD-lx2610a  PKGBUILD-odroid  PKGBUILD-odroidn2  PKGBUILD-pandora  PKGBUILD-phytium  PKGBUILD-pyra  PKGBUILD-raspberrypi  PKGBUILD-rk3399  PKGBUILD-rk3xxx  PKGBUILD-sd845  PKGBUILD-tegra  PKGBUILD-x86  README.md
simde/: hedley.h  simde-arch.h  simde-common.h
simde/arm/: neon.h
simde/arm/neon/: float32x2.h  float32x4.h  float64x1.h  float64x2.h  int16x4.h  int16x8.h  int32x2.h  int32x4.h  int64x1.h  int64x2.h  int8x16.h  int8x8.h  uint16x4.h  uint16x8.h  uint32x2.h  uint32x4.h  uint64x1.h  uint64x2.h  uint8x16.h  uint8x8.h
simde/simd-js/: bool32x4.h  float32x4.h  int32x4.h  simd-js.h
simde/x86/: avx.h  avx2.h  mmx.h  sse.h  sse2.h  sse3.h  sse4.1.h  sse4.2.h  ssse3.h
src/: box86context.c  box86context.h  box86version.h  bridge.c  bridge.h  bridge_private.h  build_info.c  build_info.h  callback.c  callback.h  config.c  custommem.c  debug.h  elfload_dump.c  elfload_dump.h  elfloader.c  elfloader.h  elfloader_private.h  elfparser.c  fileutils.c  fileutils.h  khash.h  librarian.c  librarian.h  librarian_private.h  library.c  library.h  library_list.h  library_private.h  main.c  mallochook.c  modrm.h  myalign.c  myalign.h  pathcoll.c  pathcoll.h  regs.h  run0f.h  run66.h  run660f.h  (+146 more)
src/dynarec/: arm_emitter.h  arm_epilog.S  arm_instructions.txt  arm_jmpnext.c  arm_linker.S  arm_lock_helper.S  arm_lock_helper.h  arm_next.S  arm_printer.c  arm_printer.h  arm_prolog.S  arm_table.S  dynablock.c  dynablock_private.h  dynarec.c  dynarec_arm.c  dynarec_arm_00.c  dynarec_arm_0f.c  dynarec_arm_0f.h  dynarec_arm_64.c  dynarec_arm_65.c  dynarec_arm_65.h  dynarec_arm_66.c  dynarec_arm_66.h  dynarec_arm_660f.c  dynarec_arm_660f.h  dynarec_arm_66f0.c  dynarec_arm_67.c  dynarec_arm_d8.c  dynarec_arm_d9.c  dynarec_arm_da.c  dynarec_arm_db.c  dynarec_arm_dc.c  dynarec_arm_dd.c  dynarec_arm_de.c  dynarec_arm_df.c  dynarec_arm_emit_logic.c  dynarec_arm_emit_math.c  dynarec_arm_emit_shift.c  dynarec_arm_emit_tests.c  (+22 more)
src/elfs/: elfload_dump.c  elfloader.c  elfloader_private.h  elfparser.c
src/emu/: modrm.h  run0f.h  run66.h  run660f.h  rund8.h  rund9.h  runda.h  rundb.h  rundc.h  rundd.h  runde.h  rundf.h  runf20f.h  runf30f.h  x86compstrings.c  x86compstrings.h  x86emu.c  x86emu_private.h  x86int3.c  x86primop.c  x86primop.h  x86run.c  x86run0f.c  x86run64.c  x86run640f.c  x86run6466.c  x86run6467.c  x86run66.c  x86run660f.c  x86run66d9.c  x86run66dd.c  x86run66f20f.c  x86run67.c  x86run6766.c  x86run_private.c  x86run_private.h  x86rund8.c  x86rund9.c  x86runda.c  x86rundb.c  (+16 more)
src/include/: auxval.h  box86context.h  box86lib.h  box86stack.h  bridge.h  callback.h  config.h  custommem.h  debug.h  dictionnary.h  dynablock.h  dynarec.h  dynarec_arm.h  elfload_dump.h  elfloader.h  fileutils.h  globalsymbols.h  gltools.h  gtkclass.h  khash.h  librarian.h  library.h  my_cpuid.h  myalign.h  myfts.h  pathcoll.h  rcfile.h  regs.h  sdl1rwops.h  sdl2rwops.h  setround.h  signals.h  stat64_helper.h  symbols.h  threads.h  wine_tools.h  wrappedlibs.h  wrapper.h  x86emu.h  x86run.h  (+2 more)
src/librarian/: dictionnary.c  globalsymbols.c  librarian.c  librarian_private.h  library.c  library_inner.h  library_private.h  symbols.c
src/libtools/: auxval.c  myalign.c  myalign64.c  myalignsys64.c  myfts.c  obstack.c  sdl1rwops.c  sdl2rwops.c  signals.c  stat64_helper.c  threads.c  vkalign.c  vkalign.h
src/tools/: box86stack.c  bridge.c  bridge_private.h  callback.c  fileutils.c  gtkclass.c  my_cpuid.c  pathcoll.c  rbtree.c  rcfile.c  wine_tools.c
src/wrapped/: wrappedalure.c  wrappedalut.c  wrappedandroidshmem.c  wrappedappindicator.c  wrappedappindicator3.c  wrappedappindicator3_private.h  wrappedappindicator_private.h  wrappedatk.c  wrappedatk_private.h  wrappedatkbridge.c  wrappedatomic.c  wrappedayatanaappindicator3.c  wrappedbz2.c  wrappedcairo.c  wrappedcairo_private.h  wrappedcairogobject.c  wrappedcap.c  wrappedcrashhandler.c  wrappedcrypto.c  wrappedcrypto_private.h  wrappedcurl.c  wrappedcurl_private.h  wrappedd3dadapter9.c  wrappedd3dadapter9_gen.h  wrappedd3dadapter9_genvate.h  wrappeddbus.c  wrappeddbus_private.h  wrappeddbusglib1.c  wrappeddbusglib1_private.h  wrappeddbusmenuglib.c  wrappeddbusmenuglib_private.h  wrappeddbusmenugtk.c  wrappeddbusmenugtk_private.h  wrappedexpat.c  wrappedexpat_private.h  wrappedfaudio.c  wrappedfontconfig.c  wrappedfontconfig_private.h  wrappedfreebl3.c  wrappedfreetype.c  (+264 more)
system/: box86.box86rc  box86.conf  box86.conf.cmake
tests/: ref04.txt  ref05.txt  ref11.txt  ref13.txt  ref17.txt  ref19.txt  test04  test04.c  test05  test05.c  test10  test11  test11.c  test13  test13.c  test15  test15.c  test15_version.map  test16  test16.c  test16_version.map  test17  test17.c  test19  test19.c  test_st_ino.c
tests/extensions/: mmx.c
wrapperhelper/: README.md  gen.cpp  main.cpp
x86lib/: libgcc_s.so.1  libstdc++.so.6
